--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
     "mysql": "^2.17.1",
     "node-mysql": "^0.4.2"
   },
