--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa-views": "^6.2.0",
     "mysql": "^2.17.1",
     "node-mysql": "^0.4.2"
   },
