--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "mocha"
   },
   "dependencies": {
     "@vue/cli": "^3.8.2",
     "axios": "^0.19.0",
     "babel-plugin-component": "^1.1.1",
+    "chai": "^4.2.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.9.1",
     "install": "^0.12.2",
+    "mocha": "^6.1.4",
     "node-sass": "^4.12.0",
     "npm": "^6.9.0",
+    "superagent": "^5.0.6",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.6"
@@ -41,6 +45,10 @@
     ],
     "rules": {
       "no-console": "off"
+    },
+    "globals": {
+      "describe": true,
+      "it": true
     },
     "parserOptions": {
       "parser": "babel-eslint"
